# Numeric-Perturbative-Computation

./: .gitignore  CMakeLists.txt  README.txt
gnuplot/: a.out  example  example.cc  gnuplot_i.hpp  gnuplot_only_declaration.h
include/: ConvFactor.h  Error.h  FactoryMethodTaylorCoeff.h  IFactoryMethodTaylorCoeff.h  IPsiNJ.h  ITaylorCoeff.h  IntegralNum.h  PolynomialCurveFitting.h  PsiNJ.h  TabFunc.h  TaylorCoeffClassic.h  TaylorCoeffExact.h  TaylorCoeffFit.h
src/: ConvFactor.cpp  Error.cpp  FactoryMethodTaylorCoeff.cpp  IntegralNum.cpp  PolynomialCurveFitting.cpp  PsiNJ.cpp  TabFunc.cpp  TaylorCoeffClassic.cpp  TaylorCoeffExact.cpp  TaylorCoeffFit.cpp  main.cpp
